[feature]: new endpoint, get notices by machineId
