# public/swagger.json
@@ -3322,6 +3322,40 @@
 				}
 			}
 		},
+		"/notices/notice-machine": {
+			"get": {
+				"operationId": "GetNoticesByMachineId",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Notice"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Notice"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "machineId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/notices/{id}": {
 			"put": {
 				"operationId": "UpdateNotice",
